--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+
+
+# Ignore .env files
+.env
